광주학회_논문_작업물

--- a/VoiceRecognitionSample/app/src/main/AndroidManifest.xml
+++ b/VoiceRecognitionSample/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         <activity
             android:name=".MediaActivity"
             android:exported="false" />
+        <activity
+            android:name=".MediaActivity2"
+            android:exported="false" />
         <!--
       Changes Glass touchpad response from the following key strokes:
         - Enter
